# CFamilyProjects

./: .gitignore  .gitmodules
C++/CSES/: increasing_array.cpp  missing_number.cpp  number_spiral.cpp  permutations.cpp  weird_algorithm.cpp
C++/Leetcode/: two_sum.cpp
C++/Miscellaneous/: main.cpp
C++/Workspace/learn_unit_test/: CMakeLists.txt
C++/Workspace/learn_unit_test/include/: auto_lock_system.h  clock_interface.h
C++/Workspace/learn_unit_test/src/: CMakeLists.txt  auto_lock_system.cpp
C++/Workspace/learn_unit_test/tests/: CMakeLists.txt  test_auto_lock_system.cpp  test_fixture.cpp  test_fixture_lifecycle.cpp  test_mock_sensor.cpp  test_sample.cpp  test_sum.cpp
C/2_file/: main  main.c  main.s
C/3_thread/: main  main.c
C/4_process/: main  main.c
C/ModernC/: chap1.2.c  chap3.c  chap5.c  chap6.c
C/boot.dev/: README.md
C/learn_bit_manipulation/: main.c
C/learn_can/: canrecv.c  cansend  cansend.c  test.cpp
CProjects/: main.c
CUDA/CUDAByExample/: main.c
CUDA/CutlassLearning/: CMakeLists.txt  main.cpp
CUDAProjects/CUDAByExample/: hello_world.cu
CUDAProjects/CutlassLearning/: CMakeCache.txt  Makefile  cmake_install.cmake
CppProjects/hello_world/: array.cpp  data_type.cpp  io_handling.cpp  reference.cpp
CppProjects/hello_world/learn_compilation/: CMakeLists.txt
CppProjects/hello_world/learn_compilation/include/: function.h
CppProjects/hello_world/learn_compilation/script/: learning.cpp
Exercise/CSES/: palindrome_reorder.cpp  repetitions.cpp  two_sets.cpp
OpenCL/: matvec.c
OpenCL/OpenCL_profile/: optimized1.c  util.h
OpenCLProjects/: main.c  matvec.cl  platform_ext_test.c
OpenCLProjects/OpenCL_profile/: main  main.c  optimized2.c  unoptimized.c  util.h
cadnaGPU_V1.3bis_all/: AUTHORS  ChangeLog  README.txt
cadnaGPU_V1.3bis_all/C/: .cadna.h.swp  Makefile  cadna_add_d.cc  cadna_add_s.cc  cadna_computedzero_d.cc  cadna_computedzero_s.cc  cadna_convert_d.cc  cadna_convert_s.cc  cadna_digitnumber_d.cc  cadna_digitnumber_s.cc  cadna_div_d.cc  cadna_div_s.cc  cadna_eq_d.cc  cadna_eq_s.cc  cadna_ge_d.cc  cadna_ge_s.cc  cadna_gt_d.cc  cadna_gt_s.cc  cadna_intr_d.cc  cadna_intr_s.cc  cadna_le_d.cc  cadna_le_s.cc  cadna_lt_d.cc  cadna_lt_s.cc  cadna_math_gnu.cc  cadna_mul_d.cc  cadna_mul_s.cc  cadna_ne_d.cc  cadna_ne_s.cc  cadna_private.h  cadna_random.cc  cadna_rounding.h  cadna_rounding_32.s  cadna_str_d.cc  cadna_str_s.cc  cadna_sub_d.cc  cadna_sub_s.cc  cadna_to_d.cc  cadna_to_s.cc  cadna_type.cc  (+3 more)
cadnaGPU_V1.3bis_all/Cexamples/: Makefile  ex1_cad  ex1_cad.cc  ex2_cad  ex2_cad.cc  ex3.cc  ex3_cad  ex3_cad.cc  ex4_cad  ex4_cad.cc  ex5_cad.cc  ex5_cad_opt.cc  ex6_cad  ex6_cad.cc  ex7.cc  ex7_cad  ex7_cad.cc
cadnaGPU_V1.3bis_all/Cexamplesgpu/: Makefile  Makefile_2012  Makefile_5mars2014  cfmatmul  cfmatmul.cu  mandelbrot.cu  muller  muller.cu  muller_float.cu  operCompareCADNA.sh  stencil.cu  tps.sh  tune.sh
cadnaGPU_V1.3bis_all/Cexamplesgpu_half/: Makefile  add_half_GPU.cu  add_half_GPU_cad.cu  add_loop_GPU_cad.cu  add_loop_GPU_cad_half.cu  add_loop_combGPU.cu  add_loop_combGPU_cad.cu  add_loop_combGPU_cad_half  add_loop_combGPUref.cu  add_loop_membGPU.cu  add_loop_membGPU_cad.cu  add_loop_membGPU_cad_half  cfmatmul  cfmatmul.cu  half_ameliorate.cu  mandelbrot.cu  mandelbrot_GPU.cu  mandelbrot_GPU_half.cu  mul_loop_GPU_cad_half.cu  mul_loop_combGPU.cu  mul_loop_combGPU_cad.cu  mul_loop_combGPU_cad_half  mul_loop_membGPU.cu  mul_loop_membGPU_cad.cu  mul_loop_membGPU_cad_half  test_reduction_half  test_reduction_half.cu
cadnaGPU_V1.3bis_all/Cexamplesgpu_half2/: Makefile  add_half2_GPU.cu  add_half2_GPU_cad.cu  add_half2_GPU_cad_float2.cu  add_half2_GPU_float2.cu  add_loop_GPU_cad.cu  add_loop_GPU_cad_half2.cu  add_loop_combGPU_cad.cu.old  add_loop_combGPU_cad0.cu  mul_loop_GPU_cad_half2.cu  test.cu  test2.cu
cadnaGPU_V1.3bis_all/Cgpu/: cadna_gpu.cu  cadna_gpu.h  cadna_gpu_double.cu  cadna_gpu_double.h  cadna_gpu_float.cu  cadna_gpu_float.h  cadna_gpu_half.cu  cadna_gpu_half.h  cadna_gpu_half2.cu  cadna_gpu_half2.h
cadnaGPU_V1.3bis_all/bench/: Makefile  add_loop_GPU_cad_double.cu  add_loop_GPU_cad_float  add_loop_GPU_cad_float.cu  mandelbrot_GPU_double.cu  mandelbrot_GPU_float.cu  mul_loop_GPU_cad_double.cu  mul_loop_GPU_cad_float.cu  tuneXY_double.sh  tuneXY_float.sh  tuneX_double.sh  tuneX_float.sh  tune_double.sh  tune_float.sh
cadnaGPU_V1.3bis_all/bench_half/: Makefile  add_loop_GPU_cad_half.cu  add_loop_combGPU_cad_half  add_loop_membGPU_cad_half  mandelbrot_GPU_half.cu  mul_loop_GPU_cad_half.cu  mul_loop_combGPU_cad_half  mul_loop_membGPU_cad_half  tuneX.sh  tuneXY.sh
cadnaGPU_V1.3bis_all/bench_half2/: Makefile  add_loop_GPU_cad_half2.cu  mandelbrot_GPU_half2.cu  tune.sh  tuneX.sh  tuneXY.sh
cadnaGPU_V1.3bis_all/include/: cadna.h  (+1 more)
cadnaGPU_V1.3bis_all/reduction/: CMakeLists.txt  conv2d.cu  dcm.cu  main.cu  reduction.cpp  reduction.h  reduction_cadna.cu  reduction_kernel.cu  reduction_kernel_cadna.cu  reduction_main.cu  simple.cpp  test_reduction.cu  test_reduction.h  test_reduction_cadna.cu  test_reduction_float.cu  test_reduction_half.cu  utils.cpp
cadnaGPU_V1.3bis_all/reduction/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  test_reduction
(+178 files in other folders)
